Resolved key alignment issue. Added container class to div in html file & voila

--- a/drumkit.css
+++ b/drumkit.css
@@ -13,9 +13,9 @@ html {
 
 .keys {
     display: flex;
-    min-height: 100vh;
-    align-items: center;
     justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
 .key {
